--- a/html/ui.html
+++ b/html/ui.html
@@ -7,7 +7,9 @@
 
 <body>
 	<div id="menus"></div>
-    <script src="https://kit.fontawesome.com/eb73bbb7e4.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+		integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 	<script src="js/mustache.min.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
